# WRESTRUS90

./: .gitignore  Dockerfile  Dokerfile.copy  README.md  dfdd.md  pyproject.toml  req.md  requirements.txt  structure.txt
django_app/django_app/: settings.py
django_app/templates/: base.html  contact.html  events.html  index.html  news_detail.html  profile.html
django_app/users/: admin.py  forms.py  models.py  urls.py  views.py
fastapi_app/: main.py  structure.txt
fastapi_app/bot/: handlers.py  keyboards.py  logger.py  middleware.py
fastapi_app/constants_kb/: admin.py
fastapi_app/core/: base.py  config.py  db.py  init_db.py  logging_config.py
fastapi_app/crud/: base.py  child_registrations.py  events.py  users.py
fastapi_app/db/: alembic.ini
fastapi_app/models/: __init__.py  admins.py  child_registrations.py  events.py  news.py  users.py
fastapi_app/services/: __init__.py  admin.py  handlers.py  keyboards.py  models.py
fastapi_app/vk/: celery_app.py  vk_service.py
infra/: .env.example  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  show_container_logs.sh
infra/pgdata/: postmaster.pid
wrestrus90/: db.sqlite3  example.env  manage.py
wrestrus90/api/: serializers.py  urls.py  views.py
wrestrus90/base_templates/: base.html
wrestrus90/competition/: admin.py  forms.py  models.py  urls.py  views.py
wrestrus90/core/: Mixins.py  context_processors.py  enums.py  utils_template.py
wrestrus90/event/: admin.py  forms.py  models.py  urls.py  views.py
wrestrus90/main_page/: urls.py  views.py
(+382 files in other folders)
