[project]
name = "wrestrus90"
version = "0.1.0"
description = "WRESTRUS90 FastAPI and Celery project"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "gunicorn==23.0.0",
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "python-jose==3.3.0",
    "pydantic==2.9.2",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "aiogram[redis]==3.13.1",
    "aiohttp==3.10.5",
    "vk-api==11.9.9",
    "celery==5.4.0",
    "redis==5.0.8",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.5.0",
    "asyncpg==0.29.0",
    "bcrypt==4.1.2",
    "passlib[bcrypt]==1.7.4",
    "fastadmin[fastapi,django]",
    "prometheus-fastapi-instrumentator",
    "tenacity",
    "aiocache==0.12.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "docker==7.1.0",
]